tools/fleet/fixtures/packets/invalid/missing-reply-to.case
source=valid-work.packet
mutation=remove Reply-To
expected=invalid
